# PerfRunbench

./: .gitignore  PLAN.txt  README.md  USER_GUIDE.md  environment-benchmark.yml  environment.yml  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements.txt
autotune/: __init__.py  cli.py
configs/: mobilenetv3.yaml  resnet18.yaml
docs/: architecture.md  methodology.md  product_vision_zh.md  report.md  usage_zh.md
examples/: dummy_train.py  gpu_training_pressure.py  gpu_training_pressure_config.yaml  gpu_training_pressure_server_10m_config.yaml  gpu_training_pressure_server_5m_config.yaml  gpu_training_pressure_smoke_config.yaml  gpu_training_pressure_sweep_config.yaml  heavy_training_pressure.py  heavy_training_pressure_config.yaml  iris_train.py  iris_train_config.yaml  source_edits.json  stress_train.py  stress_train_60s_config.yaml  stress_train_config.yaml  stress_train_long_config.yaml  stress_train_memory_pressure_config.yaml  timm_inference_benchmark.py  timm_inference_benchmark_config.yaml  train_config.yaml  training_workload.py
scripts/: analyze_run.py  bootstrap_server_env.sh  check_system_executor.py  diagnose_server_env.sh  inspect_executors.py  inspect_system.py  list_runs.py  recommend_config.py  restore_run.py  run_all_experiments.py  run_autotune.py  run_benchmark.py  run_real_sweep.py  run_scheduler.py  run_tests.py  run_tuned_with_budget.py  run_with_budget.py  stress_workload.py  tune_source.py  tune_system.py  tune_training_config.py
tests/: test_cgroup_monitor.py  test_cli.py  test_comparison_runner.py  test_tuner.py  (+20 more)
(+73 files in other folders)
