[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotuneai-serve"
version = "0.1.0"
description = "Cost-model-guided inference optimization and scheduling for resource-constrained AI systems."
requires-python = ">=3.10"
dependencies = [
  "psutil",
]

[project.optional-dependencies]
benchmark = [
  "numpy",
  "torch",
  "torchvision",
  "onnx",
  "onnxscript",
  "onnxruntime",
]
dev = [
  "numpy",
  "torch",
  "torchvision",
  "onnx",
  "onnxscript",
  "onnxruntime",
]

[project.scripts]
autotuneai = "autotune.cli:main"

[tool.setuptools.packages.find]
include = ["autotune*"]
