[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perfrunbench"
version = "0.1.0"
description = "PerfRunbench: resource-aware workload benchmarking, tuning, and performance comparison toolkit."
requires-python = ">=3.10"
dependencies = [
  "psutil",
]

[project.optional-dependencies]
benchmark = [
  "numpy",
  "torch",
  "torchvision",
  "protobuf",
  "onnx",
  "onnxscript",
  "onnxruntime",
]
dev = [
  "numpy",
  "torch",
  "torchvision",
  "protobuf",
  "onnx",
  "onnxscript",
  "onnxruntime",
]

[project.scripts]
autotuneai = "autotune.cli:main"

[tool.setuptools.packages.find]
include = ["autotune*"]
